<resources>
    <string name="app_name">covid19</string>
    //여기부터
    <string name="map_key" translatable="false">AIzaSyAwDF9SvtxApX5LeMqEF8rCnqSrHOgk2Eg</string>>

    <string name="k1"> 코로나바이러스(Coronavirus)는 코로나바이러스 과(Family Coronaviridae)에 속하는
    바이러스들을 지칭하며 일반적으로 조류 뿐만 아니라 사람을 포함한 다양한 포유류에서도 발견된다.
    코로나바이러스는 그 종이 다양하고, 바이러스의 특성과 숙주에 따라서 호흡기와 소화기 감염병을
    모두 유발하는 것으로 알려져 있다. 최근 사람에서는 전 세계적으로 문제시되었던 사스(SARS)와 메르스(MERS)처럼
        중증의 호흡기 증상을 유발하는 원인체로서 코로나바이러스가 주목받고 있다.</string>>

    <string name="k2"> 코로나바이러스는 외막이 둘러싸인 RNA 게놈을 가진 바이러스로 사람, 포유동물, 조류사이에서 발견되는 바이러스이다. 이 바이러스는 1930년대 초기 전염성 기관지염이 걸린 닭, 전염성 위장염에 걸린 돼지, 중증도의 간염 또는 신경 증상을 가진 쥐에서 발견되어 보고된 바 있다. 전자현미경을 통해 바이러스 입자의 표면에 곤봉 모형의 돌출부가 있는 특징적인 형태가 관찰되었고 이는 왕관을 연상시켜 라틴어 왕관을 뜻하는 ‘corona’에서 파생되어 coronavirus로 명명되었다.\n\n 지난 40년동안 주로 가축에게 경제적으로 영향을 끼치는 호흡기, 소화기 관련 감염병 사례에서 코로나바이러스가 원인체로 보고되었다. 대표적으로 조류 전염성 기관지염 바이러스(Infectious bronchitis virus, IBV), 돼지 유행성 설사병 바이러스(Porcine epidemic diarrhea virus, PEDV), 고양이 전염성 복막염 바이러스(Feline Infectious Peritonitis virus, FIPV), 소 코로나바이러스(Bovine coronavirus, BCV) 등이 알려져 있다.\n\n 사람에서 코로나바이러스는 일반적으로 감기 증상을 유발하는 원인체로 알려져 왔으나, 최근에는 중증 급성 호흡기 증후군(Severe Acute Respiratory Syndrome: SARS)과 중동 호흡기 증후군(Middle East Respiratory Syndrome: MERS), 그리고 중국 우한시에서 발생한 코로나바이러스감염증-19(신종코로나바이러스)에 의한 신규 전염성 폐렴과 같이 사람에서 발생한 신종 감염병의 주요 원인체로 코로나바이러스가 주목 받고 있다.</string>
    >

    <string name="k3">코로나바이러스는 일반적으로 Coronaviridae 과에 속하는 바이러스들을 지칭하며, 숙주에 따라 Alpha-, Beta-, Delta-, Gamma-coronavirus 속으로 나누어진다. 코로나바이러스 229E, NL63 strain 등의 사람 코로나바이러스 뿐만 아니라 고양이, 돼지, 소, 박쥐 등에서 발견되는 포유동물의 코로나바이러스는 주로 Alpha-, Beta-coronavirus 속에 속하며, 조류에 감염되는 바이러스들은 대부분 Gamma-coronavirus 속으로 분류된다. 다만, 최근 다양한 야생 조류와 돼지에서 기존의 세 가지 속에 포함되지 않는 신규 코로나바이러스가 발견되면서 Deltacoronavirus 속이 새롭게 분류되었다.</string>
    >

    <string name="k4">코로나바이러스 과에 속하는 바이러스는 일반적으로 27~32 kb 길이를 가진 단일가닥의 감염성 있는 양성(positive sense) RNA 게놈을 가지며 게놈의 5번 말단에 cap, 3번 말단에 poly A tail이 존재한다.\n\n코로나바이러스의 전체적인 직경은 80~200 nm 정도이며 전형적으로 바이러스 입자 표면에 곤봉 모양의 Spike가 존재한다. 바이러스는 피막(Envelope)을 가지고 있으며 Spike 단백질과 Envelope 단백질과 같은 주요 외막(outer membrane) 단백질들이 존재한다. Spike 단백질은 중화 항체 유도, 수용체 결합, 막 융합 등 바이러스의 감염과 병원성에 관여하고 Envelop(E) 단백질은 바이러스 입자의 형태 형성과 바이러스가 감염 후 세포 밖으로 방출할 때에 관여한다.</string>
    >

    <string name="k5">코로나바이러스의 유전체는 보통 바이러스 단백질 ORF들이 5’-Replicase(Rep)-Spike(S)-Envelope(E)-Membrane(M)-Nucleocapsid(N)-3’ 순서로 구성되어 있다. 다만, 종에 따라 비구조적 단백질(Non-structural Protein)의 유전자 순서가 다르거나 hemagglutinin-esterase (HE) 단백질을 추가로 가지고 있는 경우가 발견된다. HE 단백질은 주로 Murine coronavirus, HKU-1이 속하는 betacoronavirus 속에만 존재하는 것으로 알려져 있으며, influenza C virus에서 발견된 hemagglutinin-esterase-fusion (HEF) 단백질과 유사한 역할을 수행하며 수용체 결합과 해리 등에 관여한다.</string>
    >

    <string name="k6">코로나바이러스의 감염은 숙주세포의 수용체와 비리온(virion)의 결합에 의해서 개시된다. 코로나바이러스의 감염은 특이 수용체를 갖는 세포 의존적이며, 일반적으로 코로나바이러스는 바이러스마다 특정 종의 숙주에만 감염되는 종특이성을 갖는다. 바이러스 Spike 단백질이 숙주세포의 수용체 결합에 중요한 역할을 한다. 이때 Spike 단백질의 receptor binding domain(RBD)이 주로 관여하고 바이러스 종류에 따라 다양한 결합 방식을 보여준다. Mouse hepatitis virus의 경우, RBD의 N말단 부분이 세포 수용체에 결합하는 반면, SARS-CoV, HCoV-NL63, TGEV, HCoV-229E의 경우, RBD의 C말단 부분 또는 중간 부분이 바이러스 수용체(cellular receptor)에 결합한다.\n\n알파코로나바이러스(alphacoronavirus)에 속하는 코로나바이러스에서는 숙주 세포 표면에 존재하는 aminopeptidase N (APN, CD13) 단백질을 수용체로 사용하는 경우가 많이 관찰된다. 사람 코로나바이러스인 HCoV-NL63, SARS-CoV의 경우, angiotensin-converting enzyme 2 (ACE2)라는 수용체를 사용하는 것으로 알려졌다.\n\n숙주세포 수용체에 결합한 코로나바이러스는 Spike 단백질의 바이러스-세포 융합 기능을 통해 세포 안으로 진입하게 된다. 코로나바이러스의 유전체 RNA로부터 replicase 단백질이 만들어지며 유전자 rep1a의 생성물인 비구조단백질(nsp3, nsp4, nsp6)에 의해 형성되는 이중막 소포(double-membrane vesicles, DMVs)가 바이러스의 RNA 합성과 전사 과정에 관여한다. 코로나바이러스 음성가닥(negative strand) RNA 합성은 양성가닥(positive strand) RNA의 3’ 말단에서 시작되고 이를 주형으로 하여 3’ 말단 부위를 공유하는 유전체보다는 작은 다양한 크기의 subgenomic RNA (sg RNA)의 합성이 이루어지는 특징을 갖는다. 각각의 sgRNA는 바이러스 단백질을 합성하는데 활용된다. 바이러스의 막단백질들(M, S, E protein)은 주로 소포체(Endoplasmic reticulum)와 ‘소포체 골지체(Golgi apparatus) 사이 공간(endoplasmic reticulum-Golgi intermediate compartment, ERGIC)’에서 지질이중막 구조와 함께 성숙되어 최종적으로 비리온을 구성하는데 활용된다.</string>
    >

    <string name="k7">사람 코로나바이러스인 HCoV-OC43, -229E, -NL63, -HKU1 등은 사람에서 흔한 감염병 원인체로 알려져 있으며, HCoV-OC43, -229E의 경우 전체 호흡기 감염의 30%를 차지하고 있다. 일반적으로 코로나바이러스 감염증은 겨울과 초봄에 주로 발생하며 신생아, 노인 및 만성 폐쇄성 폐 질환이 있는 환자에서 심각한 폐렴을 유발할 수 있다. 또한 HCoV-NL63, -HKU1의 경우에도 전 세계적으로 발생하고 있으며 호흡기 감염의 최대 10%를 차지한다고 알려져 있다.</string>
    >

    <string name="k8">중증 급성 호흡기 증후군을 유발하는 사스 코로나바이러스(SARS-CoV)는 2002년 겨울 중국에서 첫 감염이 시작된 이래 수 개월 만에 홍콩, 싱가포르, 캐나다 등 전 세계적으로 확산되었던 신종 전염병 바이러스이다. 사스 코로나바이러스는 초창기 야생동물 거래 시장에서 바이러스에 감염된 사향고양이가 사람으로 전파한 것으로 알려졌으나, 후속 연구를 통해서 홍콩과 중국의 일부 지방에 존재하는 관박쥐류(Rhinolophus)가 숙주동물로 보고되었다.</string>
    >

    <string name="k9">또한, 메르스 코로나바이러스(MERS-CoV)는 중동 호흡기 증후군을 유발하는 원인체로서 2012년 사우디아라비아에서 최초 보고된 이후 중동, 유럽, 아프리카, 아시아, 미국 등 26개국에서 감염 보고가 이루어지고 있다. 국내에서도 2015년 5월 중동에서 입국한 68세 남성에서 최초 메르스 코로나바이러스 감염이 확인되었으며 의료진을 포함하여 186명의 메르스 코로나바이러스 감염 확진자가 발생한 바 있다.</string>
    >

    <string name="k10">2019년 12월부터 중국 우한시 화난 해산물 시장에서 발생한 전염성 폐렴은 사스-코로나바이러스-2(SARS-CoV-2)에 의한 새로운 인체 감염증으로 확인되었다. 초기 화난 해산물 시장에서 거래되는 야생동물에서 사람으로 전파되었을 것으로 추정되나 현재는 사람 간 전파도 이루어지고 있는 것으로 확인되고 있다. 전장 유전체 비교 분석을 통해 박쥐 유래 사스 유사 코로나바이러스(Bat SARS-like coronavirus isolate bat-SL-CoVZC45)와 가장 높은 염기서열 상동성 (89.1%)을 나타내었으며, 사람 코로나바이러스 4종과 상동성 39-43%, 메르스 코로나바이러스 50%, 사스 코로나바이러스 77%의 상동성이 확인되었다.  계통분석 결과 코로나바이러스감염증-19(신종코로나바이러스)는 베타코로나바이러스에 속하는 것으로 밝혀졌다. 2020년 1월 중국에서만 만 명 이상의 감염 확진자와 수백 명 이상의 사망자가 발생하였으며 태국, 일본, 대한민국 등 아시아 각국 및 북미와 유럽 여러 국가에서도 확진자가 발견된 만큼 전세계적인 대응 노력이 필요한 상황이다.</string>
    >

    <string name="i1">▣ 유흥시설 5종: 시설 면적 4m²당 1명인원 제한\n\n▣ 방문판매 직접 판매홍보관: 노래∙음식 제공금지/ 4m²당 1명 인원 제한\n\n▣ 노래연습장: 이용한 룸은 바로 소독, 30분 후 사용\n\n▣ 실내스탠딩 공연장: 시설 면적 4m²당 1명으로 인원제한\n\n▣식당∙카페(일반음식점∙휴게음식점제과점 영업): 테이블 간 1m 거리두기 \n또는 테이블 간 칸막이 설치(150m² 이상)\n\n(뷔페의 경우)\n▣ 공용 집게∙접시∙수저 등 사용 전후 손소독제 또는 비닐장갑 사용\n\n▣ 음식을 담기 위한 대기 시 이용자 간 간격 유지</string>
    >

    <string name="i2">▣ 밀집도 2/3 원칙, 지역∙학교 여건에 따라 조정 가능\n▣ 과대∙과밀 학교는 2/3 유지 권고</string>
    >

    <string name="i3">▣ 좌석 한 칸 띄우기\n▣ 모임∙식사 자제 권고(숙박행사 금지)</string>
    >

    <string name="i4">▣ 중점/일반 관리 시설 및 위험도 높은 활동 중심으로 마스크 착용을 의무화(중점/일반 관리 시설, 대중교통, 의료기관/약국, 집회/시위, 실내 스포츠 경기 관람, 요양 시설/주야간보호시설/고위험 사업장 근무, 500인 이상 모임/행상 등)</string>
    >

    <string name="i5">▣ 유흥시설 5종: 춤추기, 좌석 간 이동 금지/ 4m²당 1명인원 제한\n\n▣ 방문판매 직접 판매홍보관: 21시 이후 운영 중단/노래∙음식 제공금지/ 4m²당 1명 인원 제한\n\n▣ 노래연습장: 시설 면적 4m²당 1명으로 인원 제한/음식 섭취 금지/이용한 룸은 바로 소독, 30분 후 사용\n\n▣ 실내스탠딩 공연장: 음식 섭취 금지/4m²당 1명으로 인원 제한\n\n▣ 식당∙카페(일반음식점∙휴게음식점제과점 영업): 테이블 간 1m 거리두기또는 좌석, 테이블 간 칸막이 설치(150m² 이상)\n\n(뷔페의 경우)\n▣ 공용 집게∙접시∙수저 등 사용 전후 손소독제 또는 비닐장갑 사용\n\n▣ 음식을 담기 위한 대기 시 이용자 간 간격 유지</string>
    >

    <string name="i6">▣ 밀집도 2/3 준수</string>
    >

    <string name="i7">▣ 정규예배∙미사∙법회 시일식 등 좌석 수 30% 이내 인원 참여\n▣ 모임∙식사 금지</string>
    >

    <string name="i8">▣ 1단계 방역 범위 + 실외 스포츠 경기장 추가</string>
    >

    <string name="i9">▣ 유흥시설 5종: 집합금지\n\n▣ 방문판매 직접 판매홍보관: 21시 이후 운영 중단/노래∙음식 제공금지/ 8m²당 1명 인원 제한\n\n▣ 노래연습장: 21시 이후 운영 중단/시설 면적 4m²당 1명으로 인원 제한/음식 섭취 금지/이용한 룸은 바로 소독, 30분 후 사용\n\n▣ 실내스탠딩 공연장: 21시 이후 운영 중단/음식 섭취 금지/4m²당 1명으로 인원 제한\n\n▣ 식당∙카페(일반음식점∙휴게음식점제과점 영업): 카페는 포장∙배달만 허용/ 음식점은 21시 이후로 포장∙배달만 허용/ 테이블 간 1m 거리두기또는 좌석, 테이블 간 칸막이 설치(150m² 이상)\n\n(뷔페의 경우)\n▣ 공용 집게∙접시∙수저 등 사용 전후 손소독제 또는 비닐장갑 사용\n\n▣ 음식을 담기 위한 대기 시 이용자 간 간격 유지</string>
    >

    <string name="i10">▣ 밀집도 1/3 원칙(고등학교는 2/3)\n▣ 탄력적 학사운영 등으로 최대 2/3 내에서 운영 가능</string>
    >

    <string name="i11">▣ 정규예배∙미사∙법회 시일식 등 좌석 수 20% 이내 인원 참여\n▣ 모임∙식사 금지</string>
    >

    <string name="i12">▣ 실내 전체 및 집회/시위, 스포츠 경기 관람 등 위험도 높은 실외 활동에 대해 마스크 착용 의무화</string>
    >

    <string name="i13">▣ 유흥시설 5종: 집합금지\n\n▣ 방문판매 직접 판매홍보관: 21시 이후 운영 중단/노래∙음식 제공금지/ 8m²당 1명 인원 제한\n\n▣ 노래연습장: 21시 이후 운영 중단/시설 면적 4m²당 1명으로 인원 제한/음식 섭취 금지/이용한 룸은 바로 소독, 30분 후 사용\n\n▣ 실내스탠딩 공연장: 21시 이후 운영 중단/음식 섭취 금지/4m²당 1명으로 인원 제한\n\n▣ 식당∙카페(일반음식점∙휴게음식점제과점 영업): 카페는 포장∙배달만 허용/ 음식점은 21시 이후로 포장∙배달만 허용/ 테이블 간 1m 거리두기또는 좌석, 테이블 간 칸막이 설치(150m² 이상)\n\n(뷔페의 경우)\n▣ 공용 집게∙접시∙수저 등 사용 전후 손소독제 또는 비닐장갑 사용\n\n▣ 음식을 담기 위한 대기 시 이용자 간 간격 유지</string>
    >

    <string name="i14">▣ 밀집도 1/3 준수</string>
    >

    <string name="i15">▣ 비대면 20명 이내로 인원 제한\n▣ 모임∙식사 금지</string>
    >

    <string name="i16">▣ 실내 전체와 사람 간 2m 이상 거리 유지가 되지 않는 실외에서 마스크 착용이 의무화</string>
    >

    <string name="i17">▣ 유흥시설 5종: 집합금지\n\n▣ 방문판매 직접 판매홍보관: 집합금지\n\n▣ 노래연습장: 집합금지\n\n▣ 실내스탠딩 공연장: 집합금지\n\n▣ 식당∙카페(일반음식점∙휴게음식점제과점 영업): 카페는 포장∙배달만 허용/ 음식점은 21시 이후로 포장∙배달만 허용/ 8m²당 1명 인원 제한 추가\n\n(뷔페의 경우)\n▣ 공용 집게∙접시∙수저 등 사용 전후 손소독제 또는 비닐장갑 사용\n\n▣ 음식을 담기 위한 대기 시 이용자 간 간격 유지</string>>    >

    <string name="i18">▣ 원격 수업 전환</string>
    >

    <string name="i19">▣ 1인 영상만 허용\n▣ 모임∙식사 금지</string>
    >

    <string name="i20">▣ 실내 전체와 사람 간 2m 이상 거리 유지가 되지 않는 실외에서 마스크 착용이 의무화</string>
    >

    <string name="m1">평균 입자 크기가 3.0μm 이상의 유해 물질을 효과적으로 차단해줍니다. 황사, 미세먼지, 비말(비말 감염)으로부터 호흡기 보호가 가능하고 주로 직접적인 감염 환경이 아닐 경우 일반적으로 사용 가능한 마스크입니다.호흡기 질환에 걸렸을 경우, 면 마스크보다는 덴탈 마스크 사용을 권장합니다.</string>
    >

    <string name="m2">평균 입자 크기 0.6μm 이상의 유해 물질을 80% 효과적으로 차단합니다. 황사, 미세먼지, 비말(비말 감염), 초미세먼지로부터 호흡기 보호가 가능합니다. 직접적인 감염 환경이 아닐 경우 일반적으로 사용 가능합니다. 주로 황사가 심할 경우 혹은 호흡기 보호를 위해 KF80 마스크 사용을 권장합니다.</string>
    >

    <string name="m3">평균 입자 크기 0.4μm 이상의 유해 물질을 94% 효과적으로 차단합니다.황사, 미세먼지, 비말(비말 감염), 초미세먼지로부터 호흡기 보호가 가능합니다. 사람이 많이 밀집해 있는 공간에 오래 머물러야 할 경우 KF94 마스크 사용을 권장합니다.</string>
    >

    <string name="m4">KF99 마스크도 "보건용 마스크"에 해당합니다.\n평균 입자 크기 0.4μm 이상의 유해 물질을 99% 효과적으로 차단해줍니다. 황사, 미세먼지, 비말(비말 감염), 초미세먼지로부터 호흡기 보호가 가능합니다. 여기서 유의할 점은 산소 투과율이 낮기 때문에 호흡기 기저 질환이 있는 사람은 마스크 사용 전에 꼭 주의하셔야 합니다.</string>
    >

    <string name="m5">N95 마스크는 "의료용 마스크" 입니다.\n평균 입자 크기 0.2μm 이상의 유해 물질을 95% 효과적으로 차단합니다.황사, 미세먼지, 비말(비말 감염), 초미세먼지로부터 호흡기 보호가 가능합니다. 감염 위험성이 높은 환경에 있는 의료진에게 N95 마스크 사용을 권장하며, KF99와 마찬가지로 산소 투과율이 낮아 호흡기 기저 질환이 있는 사람은 마스크 착용을 주의해주세요.</string>
    >

    <string name="e1">코로나바이러스의 증상\n코로나바이러스에 감염되는 시점부터 약 14일까지는\n잠복기를 거치게 됩니다.\n잠복기에는 특별한 증상이 나타나지 않고\n이 잠복기가 끝나면 발열과 함께 기침, 가래, 호흡곤란, 설사,\n근육통, 전신 피로감 등의 증상이 나타나기 시작합니다.\n 이 증상들은 얼핏 요즘 유행하는 독감 증상과 비슷하게 나타나서\n많은 분들이 헷갈릴 수 있습니다.\n이럴 때 "내가 코로나바이러스에 감염된 건가?"하는 생각만으로는\n답이 나오지 않습니다.\n병원을 방문하셔서 정확한 진단을 받는 것이 좋습니다.\n\n</string>
    >

    <string name="e2">하지만 중국이나 해외를 방문한 경험,\n확진자와 접촉한 경험이 있는 분들은 병원이 아닌\n"질병관리본부 T.1339"​에 전화하셔서 증상을 알려야만\n빠른 조치와 확산을 막을 수 있습니다.\n마스크에는 "영어+숫자" 조합의 이름이 붙어있습니다.\n우리나라에서 가장 많이 볼 수 있는 형태는 KF+숫자의 조합입니다.\n여기서 KF는 "korea Filter"의 약자입니다.\n식약청이 인증한 공인 필터라는 의미입니다.\n 일반 패션 마스크, 면 방한대 등을 제외한\n입자 차단 기능이 확인된 마스크에만 KF가 표시됩니다\n.KF 마스크 뒤에 붙는 숫자에 따라 다시 KF90, KF94, KF99\n세 종류로 나뉩니다.\n숫자가 높을수록 코로나 마스크 효과가 좋고\n차단력이 높다고 보면 됩니다.\n\n</string>
    >

    <string name="e3">단순히 숫자로 보면 KF99를 사용하면 좋겠다고 생각하기 쉽지만\n 차단력이 높을수록 산소투과율이 점점 낮아지기 때문에\n 장시간 사용하기에는 숨쉬기가 힘들게 느껴질 수 도 있습니다.\nN95 마스크는 말 그대로 마스크의 일종으로 알려져 있으나,\n보통 마스크와는 기능적으로 차별화된 "호흡기"에 속합니다.\n 호흡기는 미국 국립보건원(CDC)의 하부기관인\n국립산업안전보건연구원의 규제를 받으며,\n차단의 수준에 따라 여러 등급으로 분류됩니다.\n바이러스 차단을 위해서는 N95 이상의 호흡기를\n착용할 것을 권장합니다.\nN95에서 95는 공기에 떠다니는 1.0 마이크로미터 이상 크기의\n미세과립의 95% 이상을 걸러 준다는 뜻이고,\nN은 "Not resistant to oil"의 약자로 기름 성분에 대해\n저항성이 없는 것을 말합니다.\n\n ​</string>
    >

    <string name="e4">숫자가 높을수록 미세먼지가 많이 차단된다는 뜻이기도 합니다.\n그렇다면 숫자가 높은 마스크를 쓸수록 코로나 마스크 효과가\n더 좋을까요?\n코로나바이러스 예방을 위해서는 KF80 마스크를\n빈 공간없이 제대로 쓴다면 코로나 마스크 효과,\n충분히 예방 가능합니다.\n숫자가 높아질수록 차단력은 강해지지만\n반대로 숨쉬기가 불편해질 수 있다는 단점을 가지고 있기도 합니다.\n호흡기 질환, 심장질환, 임산부의 경우는\nKF80 이상의 마스크는 좋지 않으니 참고하시기 바랍니다.\n필터가 내장되어 있는 비싼 마스크 대신\n하루 쓰고 버리는 마스크로 청결을 유지하는 것도\n비말감염을 예방할 수 있습니다.\n\n</string>
    >

    <string name="e5">올바른 마스크 착용법\n첫째, 얼굴크기에 맞는 마스크를 잘 선택하여\n밀착되도록 사용하여야 합니다.​\n어린이용과 성인용이 구분된 보건용 마스크는 없기 때문에\n얼굴 크기가 맞는 마스크를 잘 밀착되도록 착용하여야 합니다.\n\n</string>
    >

    <string name="e6">둘째, 착용 후 마스크 겉면을 만지지 않아야 합니다.\n마스크 겉면에는 먼지나 바이러스등이 묻어있을 수 있으므로\n착용 후 겉면은 만지지 않는 것이 바람직합니다.\n\n</string>
    >

    <string name="e7">​셋째, 한번 사용한 마스크는 재사용해서는 안 됩니다.\n외부 공기가 차단된 상태에서 습기가 차면\n세균이 번식할 수 있기 때문에 마스크는 1회 사용 후\n버리는 것이 가장 바람직합니다.\n또한 필터 교체형 마스크의 경우에도 필터는 일회용입니다.</string>
    >

</resources>