<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="400dp"
        android:layout_height="769dp"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/m2" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/e1"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="400dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/e2"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="347dp"
                android:layout_height="500dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/e3"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="347dp"
                android:layout_height="609dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/e4"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="347dp"
                android:layout_height="257dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/e5"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/e6"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="262dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="100dp"
                android:gravity="center_horizontal"
                android:text="@string/e7"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>