<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepOneActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="다중이용시설 방역 관리"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="405dp"
        android:layout_height="252dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="-211dp"
        android:background="@drawable/bg_round5"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/i1"
        android:textSize="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="중점 관리 시설 대상 단계별 방역 조치"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="330dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_round5"
        android:padding="12dp"
        android:text="@string/i2"
        android:textSize="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="단계별 등교 원칙"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="445dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_round5"
        android:padding="12dp"
        android:text="@string/i3"
        android:textSize="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="단계별 마스크 착용 의무"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="555dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="585dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_round5"
        android:padding="12dp"
        android:text="@string/i4"
        android:textSize="13dp" />

</RelativeLayout>