<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="코   로   나   란   ?"
                android:textColor="#F4A836"
                android:textSize="40dp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview">

                <VideoView
                    android:id="@+id/VideoView"
                    android:layout_width="match_parent"
                    android:layout_height="237dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
            </FrameLayout>

            <TextView
                android:layout_width="221dp"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="코로나바이러스"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="-17dp"
                android:text="@string/k1"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="336dp"
                android:layout_height="277dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/k1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="코로나바이러스의 전자현미경 사진"
                android:textSize="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="기원 및 명명"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="850dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="-17dp"
                android:text="@string/k2"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="분류"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="340dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/k3"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="구조와 형태"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="450dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/k4"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="336dp"
                android:layout_height="277dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/k2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:text="코로나바이러스(메르스 코로나바이러스)의 전자현미경 사진"
                android:textSize="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/k5"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="336dp"
                android:layout_height="200dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/k3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="코로나바이러스 3D그래픽, 외부 모습(왼쪽), 절단면(오른쪽)을 보여준다."
                android:textSize="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="복제"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="1200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/k6"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="336dp"
                android:layout_height="200dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/k4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="코로나바이러스의 복제 싸이클 예시 - 사스, 메르스 코로나바이러스"
                android:textSize="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="인체감염"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/k7"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="사스 코로나바이러스: 중증 급성 호흡기 증후군"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/k8"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="메르스 코로나바이러스: 중동 호흡기 증후근"
                android:textSize="23dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/k9"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="코로나바이러스감염증-19:\n신종코로나바이러스 감염증"
                android:textSize="23dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="336dp"
                android:layout_height="200dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/k5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="신종 코로나바이러스 감염증의 발원지인 중국 우한의 기차역의 2020년 1월 22일 모습.\n많은 사람들이 감염을 우려하여 우려하여 마스크를 쓰고 있다."
                android:textSize="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="550dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/k10"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="336dp"
                android:layout_height="210dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/k6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="20dp"
                android:text="(A) 2019년 코로나바이러스감염증-19의 사진.\n(B) 인체 호흡기 상피세포에 침입한 바이러스의 사진."
                android:textSize="10dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>